build(gradle): init "build.gradle.kts"